--- a/css/header.css
+++ b/css/header.css
@@ -580,7 +580,7 @@ transition: 0.5s ease-in-out;
    margin-top: 10px;
    flex-direction: row-reverse;
    margin-bottom: 20px;
-   background-color: var(--softpink);
+   background-color: var(--softpink) !important;
    margin-left:15px;
    border-radius: 16px;
    margin-right: 15px;
