--- a/css/common.css
+++ b/css/common.css
@@ -101,18 +101,6 @@ h5{ font-family:var(--lato-black) ;}
     radial-gradient(at 0% 0%, #ec00ff 0%, rgba(0,0,0,0) 70%),
     #ff0000;
    --body-color:radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(171,209,234,1) 100%); 
-   
-
-
-    /* --body-color:rgb(255,255,255);
-    background: -moz-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%, rgba(171,209,234,1) 100%);
-    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(171,209,234,1)));
-    background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(171,209,234,1) 100%);
-    background: -o-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(171,209,234,1) 100%);
-    background: -ms-radial-gradient(center, ellipse cover,  rgba(255,255,255,1) 0%,rgba(171,209,234,1) 100%);
-    background: radial-gradient(ellipse at center,  rgba(255,255,255,1) 0%,rgba(171,209,234,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#abd1ea',GradientType=1 ); */
-    --instagram:#d62976;
     --facebook:#3b5998;
     --twitter:#1DA1F2;
     --linkedin:#0072b1;
@@ -160,9 +148,7 @@ a{
 }
 html{
     font-size: 62.5%;
-    /* overflow-x: hidden; */
     box-sizing: border-box;
-    background: var(--body-color) !important;
     width: 100%;
     height: auto;
 }
@@ -171,8 +157,9 @@ body{
     letter-spacing: 1.1;
     width: 100% !important;
     height: 100vh;
+    background: var(--body-color) !important;
     position: relative;
-    /* overflow: hidden; */
+    overflow-x: hidden;
 }
 
   .resp__search__bar{
@@ -378,7 +365,7 @@ body{
 }
 .anchor-tag-form a{
     font-size: var(--font-size14) !important;
-    color:var(--para-dark-h2);
+    color:var(--para-dark-h2) !important;
 }
 .close-edit2{
     margin-top: -20px !important;
@@ -422,8 +409,8 @@ body{
     padding: 4px 8px;
  }
  .badge-adjustment{
-    right: -12px;
-    top: 20px;
+    right: -15px;
+    top: 14px;
     font-size: var(--font-size8);
     padding: 2px 7px;
  }
@@ -540,7 +527,7 @@ font-size: var(--font-size16);
     line-height: 2;
     transition:0.5s ease-in-out;
     z-index: 88;
-    padding: 0px 20px;
+    padding: 8px 20px;
     border-top-left-radius: 22px !important;
     border-top-right-radius: 22px !important; 
 }
@@ -556,7 +543,7 @@ font-size: var(--font-size16);
     content: '';
     position: absolute;
     width: 38px;
-    min-height: 48px;
+    min-height: 50px;
     top: 0px;
     left: 88%;
     z-index: -1;
@@ -1130,7 +1117,7 @@ font-size: var(--font-size16);
     position: absolute;
     top: 0px;
     left: 0px;
-    background:var(--text-shadow);
+    background: #0007;
     width: 100%;
     height: 100%;
 }
@@ -1628,6 +1615,9 @@ font-size: var(--font-size16);
 .foont16{
     font-size:var(--font-size16) !important;
 }
+.foont18{
+    font-size:var(--font-size18) !important;
+}
 .border-radius{
     border-radius: 20px !important;
 }
@@ -1656,51 +1646,7 @@ font-size: var(--font-size16);
     font-size: var(--font-size20);  
     position: relative;
 }
-.dropBoxOPenNew{
-    position: absolute;
-    bottom: -4px;
-    left: 50px;
-    padding: 14px 16px;
-    width: 700px;
-    height: auto;
-    border-radius: 10px;
-    box-shadow: var(--box-shadow);
-    background: var(--pure-white);
-    color: var(--para-dark-h2);
-    transition: 0.5s ease-in-out;
-    /* opacity: 0;  */
-    display: block;
-}
-/* .dropBoxOPenNew:hover,
-.dropBoxOPenNew.active{
-    opacity: 1;
-} */
-/* .dropBoxOPenNew strong{
-    color: var(--li-color);
-    font-size: var(--font-size14);
-    padding-bottom: 6px;
-} */
-/* .dropBoxOPenNew ul .checklist{
-    background: var(--temp-head-line);
-    padding: 6px 16px;
-    border: 2px solid var(--para-shade-op);
-    border-radius: 8px;
-    width: 170px;
-    box-sizing: border-box;
-} */
-/* .dropBoxOPenNew ul .checklist h6{
-    font-size: var(--font-size15);
-    color:var(--para-tint-h4) ;
-    margin-bottom: 6px;
-    letter-spacing: 0px;
-} */
-/* .dropBoxOPenNew ul .checklist p{
-    font-size: var(--font-size14);
-    margin-bottom: 0px;
-    color: var(--para-dark-h2);
-    max-width: 100%;
-    letter-spacing: 0px;
-} */
+
 .magicsearch::placeholder{
     text-transform: capitalize;
     color: var(--para-shade-op);
@@ -2016,10 +1962,4 @@ dd > .main__listing .listing .cat input:checked + span {
   ul.list__faq > li:has(input[type="radio"]:checked) + li {
     border-top: solid 1px var(--pure-white);
   }
-/* select.w__600{
-    width: 600px !important;
-}
- */
 
-
-  
