css file aos remove and no ui slider remove

--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,7 @@
     left: 0px;
     right: 0px;
     bottom: 0px;
-    background: var(--text-shadow2);
+    background: #0007;
     width: 100%;
     height: 100%;
 }
