--- a/css/common.css
+++ b/css/common.css
@@ -1,23 +1,55 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@1,700&family=Damion&family=Lato:wght@400;700;900&family=Montserrat:wght@400;500;600;700;800;900&family=Mukta+Malar:wght@500;600;700;800&family=Roboto+Condensed:wght@900&display=swap');
 
 /* paragraph and sub-heading font are used  */
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../fonts/Lato/Lato-Regular.ttf') format('truetype'),  /* TTF format */
+         url('../fonts/Lato/Lato-Regular.woff') format('woff'),      /* WOFF format */
+         url('../fonts/Lato/Lato-Regular.woff2') format('woff2');   /* WOFF2 format */
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato__bold';
+    src: url('../fonts/Lato/Lato-Bold.woff') format('woff'),
+         url('../fonts/Lato/Lato-Bold.ttf') format('truetype'),
+         url('../fonts/Lato/Lato-BoldItalic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato__black';
+    src: url('../fonts/Lato/Lato-Black.ttf') format('truetype'),
+         url('../fonts/Lato/Lato-Black.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+}
+/* Define other font faces similarly */
+/* 
  @font-face {
-    font-family:"lato-light" ;
-    src: url("../fonts/Lato/Lato-Light.ttf")format("ttf");
+    font-family:"Lato" ;
+    src: url("../fonts/Lato/Lato-Regular.ttf")format("ttf");
 } 
 @font-face {
-    font-family:"lato-Bold";
+    font-family:"Lato__bold";
     src: url("../fonts/Lato/Lato-Bold.woff")format("woff");
-}
-@font-face {
+} */
+/* @font-face {
     font-family:"lato-black" ;
     src: url("../fonts/Lato/Lato-Black.woff")format("woff");
-}
+} */
 
 /* main heading font are used  */
 @font-face {
-    font-family:"roboto-black" ;
-    src: url("../fonts/roboto-condensened/RobotoCondensed-Black.woff")format("woff");
+    font-family:"roboto__black" ;
+    src: url("../fonts/roboto-condensened/RobotoCondensed-Black.ttf")format("truetype"),
+         url("../fonts/roboto-condensened/RobotoCondensed-Black.woff")format("woff"),
+         url("../fonts/roboto-condensened/RobotoCondensed-Black.woff2")format("woff2");
+         font-weight: bold;
+         font-style: normal;
 }
 
 p{ font-family:var(--lato-regular) ;}
@@ -30,10 +62,11 @@ h4{ font-family:var(--lato-black) ;}
 h5{ font-family:var(--lato-black) ;}
 
 :root{
-    --lato-regular:"lato-regular";
-    --lato-bold:"lato-Bold";
-    --lato-span:"lato-light";
-    --lato-black:"lato-black";
+    --lato-regular:"Lato";
+    --lato-bold:"Lato__bold";
+    --lato-span:"Lato";
+    --lato-black:"Lato__black";
+    --roboto-black:"roboto__black";
     --font-size7:7px;
     --font-size8:8px;
     --font-size9:9px;
@@ -89,6 +122,7 @@ h5{ font-family:var(--lato-black) ;}
     --gradient-support:linear-gradient(to right, #ff6a00, #ee0979);
     --text-suppot:radial-gradient(circle, rgba(0,85,138,1) 35%, rgba(211,1,2,1) 100%);
     --text-shadow:linear-gradient(to right, #485b6c30, #0c546250);
+    --backdark:#0007;
     --text-shadow2:#0004;
     --short-form: radial-gradient(circle at 100% 100%, #ffffff 0, #ffffff 3px, transparent 3px) 0% 0%/8px 8px no-repeat,
     radial-gradient(circle at 0 100%, #ffffff 0, #ffffff 3px, transparent 3px) 100% 0%/8px 8px no-repeat,
@@ -105,6 +139,7 @@ h5{ font-family:var(--lato-black) ;}
     --twitter:#1DA1F2;
     --linkedin:#0072b1;
     --youtube:#FF0000;
+    --instagram:#cd486b;
     --social-media:#E1F0F0;
     --pure-white:#fff;
     --dark-color:#2e2c2c;
@@ -557,6 +592,7 @@ font-size: var(--font-size16);
 }
 .setmenu li a{
     font-size: var(--font-size18);
+    font-family: var(--lato-regular);
     color: var(--li-color);
     transition: 0.5s ease-in-out;
     text-decoration: none;
@@ -1117,7 +1153,7 @@ font-size: var(--font-size16);
     position: absolute;
     top: 0px;
     left: 0px;
-    background: #0007;
+    background:var(--backdark);
     width: 100%;
     height: 100%;
 }
@@ -1325,7 +1361,9 @@ font-size: var(--font-size16);
 .card-img-margin{
     height: 100px !important;
     transform: none !important;
+    position: relative;
 }
+
 .transform-none{
     transform: none !important;
 }
@@ -1562,7 +1600,7 @@ font-size: var(--font-size16);
 .agent__block {
     width: 80px;
     height: 80px;
-    background: url("../IMAGES/card/top__project/preferd-agent.png") no-repeat;
+    background: url("../img/card/top__project/preferd-agent.png") no-repeat;
     background-size: 100% 100%;
 }
 
@@ -1962,4 +2000,10 @@ dd > .main__listing .listing .cat input:checked + span {
   ul.list__faq > li:has(input[type="radio"]:checked) + li {
     border-top: solid 1px var(--pure-white);
   }
+.white__color{
+    background: var(--pure-white)!important;
+}
 
+.prop__type__collection__select{
+    color: var(--li-color) !important;
+}
