--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        background: #0007;
+        background:var(--backdark);
         /* background-image: linear-gradient(45deg, rgba(0,0,0,.3) 50%, rgba(0,0,0,.7) 50%);
         background-size: 3px 3px; */
         z-index: 2;   
@@ -145,7 +145,7 @@
     left: 0px;
     right: 0px;
     bottom: 0px;
-    background: #0007;
+    background:var(--backdark);
     width: 100%;
     height: 100%;
 }
@@ -570,7 +570,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 15px 20px 15px;
-    /* height: 700px; */
 }
 .colusion .left__sect__filter__resp{
     display: flex;
@@ -628,7 +627,6 @@
 .selection__list__tab:hover::before{
     width: 100%;
 }
-
 .filter-option,
 .filter-option2 {
     display: flex;
@@ -639,7 +637,6 @@
     width: 100%;
     border-radius: 6px;
     max-width: max-content;
-    /* max-width: 120px; */
     margin-right: 15px;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -650,7 +647,6 @@
     background: var(--pure-white);
     color: var(--li-color);
 }
-
 .w-setting{
     max-width: 120px;
 }
@@ -692,7 +688,6 @@
     font-size: var(--font-size16);
     margin-right: 15px;
 }
-
 .comment-form-cookies-consent input[type=checkbox] {
     position: relative;
       border: 2px solid var(--li-color);
@@ -709,18 +704,15 @@
       width: 20px;
       opacity: .5;
   }
-  
   .comment-form-cookies-consent input[type=checkbox]:hover {
     opacity: 1;
   }
-  
   .comment-form-cookies-consent input[type=checkbox]:checked {
     background-color: var(--preferred-agent);
     border: none;
     opacity: 1;
     border-radius: 3px;
   }
-  
   .comment-form-cookies-consent input[type=checkbox]:before {
     content: '';
     position: absolute;
@@ -739,8 +731,7 @@
     font-size: var(--font-size14);
     color: var(--li-color)!important;
   }
-
-select.custom__select__bar:not([size]):not([multiple]){
+ select.custom__select__bar:not([size]):not([multiple]){
     width: 500px !important;
     background: var(--softpink);
     border: none;
@@ -755,66 +746,15 @@ select.custom__select__bar:not([size]):not([multiple]).selected{
     border: none;
     outline: none;
     direction: bottom;
-}
+} 
 .ui__NO__Sli__bom{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-    width: 100%;
-    max-width: 900px;
-    /* margin: 0 auto; */
+    padding-top: 20px;
 }
-.ui__NO__Sli__bom span{
-    height: 30px;
-    padding-top: 38px;
+.countdown{
+    padding: 10px 15px;
 }
-
-.min__resp{
-    max-width: 500px !important;
-    width: 100%;
-    /* height: 50px; */
-}
-.max__resp{
-    max-width: 500px !important;
-    width: 100%;
-    /* height: 50px; */
-}
-#input-select,
-#input-number {
-	padding: 7px;
-	margin: 15px 5px 5px;
-	width: 400px;
-    border-radius: 20px;
-    border: 1px solid var(--temp-head-col);
-}
-   input[type="checkbox"]{
-    border: 1px solid red;
-  }
-  .slider-wrapper{
-    padding-bottom: 30px;
-  }
-
-
 #slider143 {
     margin: 20px;
-}
-
-.input-container {
-    display: flex;
-    align-items: center;
-    margin: 10px;
-}
-
-label {
-    margin-right: 10px;
-}
-
-.arrow {
-    cursor: pointer;
-    font-size: 18px;
-    margin: 0 5px;
-    user-select: none;
 }
   .property__type{
     display: flex;
@@ -823,7 +763,6 @@ label {
     padding-top: 30px;
   }
   .prop__inside__collection{
-    width: 130px;
     height: 90px;
     text-align: center;
     text-transform: capitalize;
@@ -834,6 +773,7 @@ label {
     cursor: pointer;
     border: 1px solid var(--para-tint-h4);
     flex-direction: column;
+    color: var(--para-dark-h2);
     justify-content: center;
     align-items: center;
     margin-right: 20px;
@@ -853,16 +793,15 @@ label {
     max-width: 70px;
   }
   .prop__inside__collection h4{
-    font-size: var(--font-size14);
+    font-size: var(--font-size13);
   }
 .prop__inside__collection.selected {
     background-color:var(--checked);
 }
 
 .prop__inside__collection.selected .prop__inside__collection i {
-    display: inline-block; /* Show the check icon when selected */
+    display: inline-block;
 }
-
   .accordion-item3 {
     border: 1px solid #ddd;
     margin-bottom: 10px;
@@ -885,25 +824,19 @@ label {
     padding: 10px 15px;
     cursor: pointer;
     color: var(--li-color);
-    background-color: var(--pure-white);
+    background-color: var(--pure-white) !important;
 }
-
-
 .accordion-header3.selected {
     background-color: var(--pure-white);
 }
-
 .accordion-content3 {
-    /* padding: 10px; */
     background:var(--pure-white);
     color: var(--para-dark-h2);
     display: none;
 }
-
 .accordion-header3.hover .form-setting {
     transform: rotate(180deg);
 }
-
 .fa-chevron-up.d-none {
     display: none;
 }
@@ -919,7 +852,6 @@ label {
 .toggle-container {
     text-align: center;
 }
-
 .toggle-switch {
     position: relative;
     display: inline-block;
@@ -927,11 +859,9 @@ label {
     height: 20px;
     margin-right: 15px;
 }
-
 .toggle-switch input {
     display: none;
 }
-
 .sliderabcd {
     position: absolute;
     cursor: pointer;
@@ -941,10 +871,8 @@ label {
     bottom: 0;
     background-color:var(--temp-head-col);
     transition: 0.3s ease-in-out;
-    border-radius: 20px;
-    
+    border-radius: 20px; 
 }
-
 .sliderabcd:before {
     position: absolute;
     content: "";
@@ -956,20 +884,63 @@ label {
     transition: 0.3s ease-in-out;
     border-radius: 50%;
 }
-
 input:checked + .sliderabcd {
     background-color:var(--light-blue-op);
     background-color:var(--light-blue-header);
-
 }
-
 input:checked + .sliderabcd:before {
     transform: translateX(20px);
 }
-
 #toggleStatus {
     margin-top: 10px;
     font-weight: bold;
     color: #555;
     display: none;
+}
+  .input-animated {
+    position: relative;
+    margin-bottom: 1.5rem;
+  }
+  .input-animated input[type="text"] {
+    font-size:var(--font-size14);
+    padding: 6px 10px;
+    border: none;
+    border-bottom:1px solid var(--softpink);
+    outline: none;
+    box-shadow: none;
+    width: 100%;
+    transition: border-bottom-color 0.3s ease;
+  }
+  .input-animated input[type="text"]:focus,
+  .input-animated input[type="text"]:hover {
+    border-bottom-color:var(--temp-head-col);
+  }
+  .label-name {
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: transform 0.3s ease;
+    transform-origin: top left;
+    pointer-events: none;
+  }
+  .input-animated input[type="text"]:focus ~ .label-name,
+  .input-animated input[type="text"]:hover ~ .label-name {
+    transform: translateY(-80%) scale(0.8); 
+  }
+  .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default, .ui-button, html .ui-button.ui-state-disabled:hover, html .ui-button.ui-state-disabled:active{
+    width: 18px !important;
+    height: 18px !important;
+    border-radius: 50%;
+    outline: none !important;
+    border:2px solid var(--light-blue-header)!important;
+  }
+  .ui-widget-header{
+    background: var(--light-blue-header) !important;
+  }
+  select.range__width:not([size]):not([multiple]){
+    width: 300px !important;
+}
+.width__600{
+    width: 600px !important;
+    margin: 20px 0px;
 }
